force-app/main/default/objects/Seller__c/Seller__c.object-meta.xml
<CustomObject>
    <label>Seller</label>
    <nameField>
        <label>Seller Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sellers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>