force-app/main/default/objects/Seller__c/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <label>CEO</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>