force-app/main/default/objects/Seller__c/fields/Number_of_cars__c.field-meta.xml
<CustomField>
    <fullName>Number_of_cars__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of cars</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>