force-app/main/default/objects/Seller__c/fields/Sold_Cars__c.field-meta.xml
<CustomField>
    <fullName>Sold_Cars__c</fullName>
    <label>Sold Cars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>